apps/n8n/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n
  namespace: n8n
  annotations:
    metallb.universe.tf/address-pool: homelab-pool
    external-dns.alpha.kubernetes.io/hostname: n8n.lan.tapslab.com
spec:
  type: LoadBalancer
  ports:
    - port: 5678
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: n8n
