apps/n8n/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: n8n
  namespace: n8n
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "n8n.lan.tapslab.com"
spec:
  parentRefs:
  - name: default-gateway
    namespace: istio-system
    sectionName: https
  hostnames:
  - "n8n.lan.tapslab.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: n8n
      port: 5678
